--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "ds2-save-editor"
+name = "ds2_sl2_cli"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 anyhow = "1"
 aes = "0.8"
 cbc = "0.1"
 byteorder = "1"
-encoding_rs = "0.8"   # for UTF-16LE to UTF-8
+clap = { version = "4", features = ["derive"] }
+md-5 = "0.10"   # crate name is "md-5"
